--- a/h.html
+++ b/h.html
@@ -15,8 +15,11 @@
             <img id="img" src="https://cdn.nody.ir/files/2021/08/09/nody-%D8%AF%D8%B3%D8%AA%D9%87-%D8%A8%D8%A7%D8%B2%DB%8C-%D8%A8%D8%B1%D8%A7%DB%8C-%DA%AF%D9%88%D8%B4%DB%8C-1628503464.jpg" alt="game'a picture">
             <br><br>
             <button id="click" onclick="ch()">
-                    next
+                    Next
             </button>
+            <button id="click" onclick="ch1()">
+                Previous
+        </button>
         </div>
     <div/>
            
